# fastapi-prisma-test

./: .env  .gitignore  README.md  pyproject.toml  server.py
prisma/: schema.prisma
src/fastapi_prisma_test/: __init__.py
